--- a/uomwebdev/temp.html
+++ b/uomwebdev/temp.html
@@ -20,7 +20,7 @@
 	</script>
 
 	<h3>Input Validation</h3>
-	<p>JavaScript can be used for validating form inputs. Without JS, the form is only checked for validity when the submit button is pressed. We can use JS to actually check the input as soon as the user exits the input box. That way they can make corrections as they go.</p>
+	<p>JavaScript can also be used for validating form inputs on-demand. Without JS, the form is only checked for validity when the submit button is pressed. We can use JS to actually check the input as soon as the user exits the input box. That way they can make corrections as they go.</p>
 	<p>The code below uses the method <code>reportValidity()</code> to trigger the browser's built-in form validation UI for an element or full form. We are going to use JavaScript's <code>blur</code> event, which occurs when an element loses focus, i.e., when the user moves to another element. We have set the text input's <code>type</code> to "email", and have made it <code>required</code>.</p>
 	<form action="https://httpbin.org/post" method="post" id="num-form">
 		<p> <label for="email">Enter your email:</label>
