Make minor text edits.

--- a/uomwebdev/DOM-methods.html
+++ b/uomwebdev/DOM-methods.html
@@ -191,8 +191,7 @@
 				<h2 id="form-valid">JavaScript Form Validation</h2>
 				<article>
 					<h3 id="input-valid">Input Validation</h3>
-					<p>HTML5 has a number of built-in validation attributes for form inputs, such as <code>pattern</code> for phone
-						numbers or passwords, <code>min</code> and <code>max</code> for numbers or amounts, <code>required</code>, and
+					<p>HTML5 has a number of built-in validation attributes for form inputs, such as <code>pattern</code> for phone numbers or passwords, <code>min</code> and <code>max</code> for numbers or amounts, <code>required</code>, and
 						input <code>type</code> for <code>email</code>, <code>url</code>, <code>number</code>, etc. But there are many
 						checks that HTML can't
 						complete, like checking a server for available usernames, making sure that a confirmed password matches the
