--- a/uomwebdev copy/DOM-methods.html
+++ b/uomwebdev copy/DOM-methods.html
@@ -11,13 +11,13 @@
 <body>
 	<div class="container">
 		<header>
-<h1>COMPUTERPHILO</h1>
+			<h1>COMPUTERPHILO</h1>
 		</header>
 		<nav>
-<ul>
-	<li><a href="#">About</a></li>
-	<li><a href="#">Contact</a></li>
-</ul>
+			<ul>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
 		</nav>
 
 		<div class="top-bar">
@@ -191,19 +191,25 @@
 				<h2 id="form-valid">JavaScript Form Validation</h2>
 				<article>
 					<h3 id="input-valid">Input Validation</h3>
-					<p>HTML5 has a number of built-in validation attributes for form inputs, such as <code>pattern</code> for phone numbers or passwords, <code>min</code> and <code>max</code> for numbers or amounts, <code>required</code>, and
-						input <code>type</code> for <code>email</code>, <code>url</code>, <code>number</code>, etc. But there are many
+					<p>HTML5 has a number of built-in validation attributes for form inputs, such as <code>pattern</code> for
+						phone numbers or passwords, <code>min</code> and <code>max</code> for numbers or amounts,
+						<code>required</code>, and
+						input <code>type</code> for <code>email</code>, <code>url</code>, <code>number</code>, etc. But there are
+						many
 						checks that HTML can't
 						complete, like checking a server for available usernames, making sure that a confirmed password matches the
-						original, giving custom feedback on password strength or any other input, or triggering validation checks when
-						exiting an input instead of waiting for the submit button to be clicked.</p>
+						original, giving custom feedback on password strength or any other input, or triggering validation checks
+						when
+						exiting an input instead of waiting for the submit button to be clicked.
+					</p>
 					<p>Without JS, the form is only checked for validity
 						when the submit button is pressed. We can use JS to actually check the input as soon as the user exits the
 						input
 						box. That way they can make corrections as they go.</p>
 					<p>The code below uses the method <code>reportValidity()</code> to trigger the browser's built-in form
 						validation
-						UI for an element or full form. We are going to use JavaScript's <code>blur</code> event, which occurs when an
+						UI for an element or full form. We are going to use JavaScript's <code>blur</code> event, which occurs when
+						an
 						element
 						loses focus, i.e., when the user moves to another element. We have set the text input's <code>type</code> to
 						"email",
@@ -273,7 +279,7 @@
 			</section>
 		</main>
 		<aside>
-			<h3>On This Page:</h3>
+			<h3>Contents:</h3>
 
 			<ul>
 				<li><a class="h2" href="#find-elems">Finding Elements</a></li>
@@ -283,9 +289,14 @@
 					<li><a class="h3" href="#by-class">Find an HTML Element by Class</a></li>
 					<li><a class="h3" href="#by-selector">Find an HTML element by CSS Selector</a></li>
 				</ul>
-				<li><a href="#modify-elems" class="h2">Modifying HTML Elements</a></li>
+				<li><a href="modify-elems" class="h2">Modifying HTML Elements with Javascript</a></li>
 				<ul>
-					
+					<li><a href="#modify-attr">Changing the Value of an Attribute</a></li>
+					<li><a href="dymamic" class="h3">Dynamic HTML content</a></li>
+				</ul>
+
+				<ul>
+
 				</ul>
 			</ul>
 		</aside>
