--- a/uomwebdev/DOM-methods.html
+++ b/uomwebdev/DOM-methods.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>DOM Methods</title>
-	<link rel="stylesheet" href="styles2.css" />
+	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
 </head>
 
